# TestGrid

./: .gitignore  README.md  docker-compose.yml  package-lock.json  sss
backend-api/: Dockerfile  README.md  base.env  docker-compose.yml  env.example  pyproject.toml  start.sh
backend-api/app/: main.py
backend-api/app/api/: deps.py
backend-api/app/api/api_v1/: api.py
backend-api/app/api/api_v1/endpoints/: tasks.py  users.py
backend-api/app/celery_app/: __init__.py
backend-api/app/core/: config.py
backend-api/app/crud/: tasks.py  users.py
backend-api/app/db/: __init__.py
backend-api/app/enums/: tasks.py  users.py
backend-api/app/logs/: log_conf.py  logging.conf
backend-api/app/models/: __init__.py  tasks.py  users.py
backend-api/app/schemas/: tasks.py  users.py
backend-api/app/utils/: users.py
backend-api/app/workers/: celery_task_event_handler.py  main.py
frontend/: Dockerfile  docker-compose.yml  env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: App.tsx  Button.tsx  Contact.tsx  Container.tsx  DashboardHeader.tsx  FeatureCard.tsx  Features.tsx  Footer.tsx  Header.tsx  Heading.tsx  HistoryCard.tsx  Input.tsx  Layout.tsx  Logo.tsx  Nav.tsx  NavBar.tsx  Paragraph.tsx  PenOption.tsx  Plans.tsx  ResultBigCard.tsx  ResultSmallCard.tsx  Reviews.tsx  SectionHeading.tsx  Sidebar.tsx  SidebarLink.tsx
frontend/src/features/: HomePage.tsx  Login.tsx  NetworkScanning.tsx  PenOptions.tsx  PenResult.tsx  Register.tsx  Signup.tsx  (+3 more)
(+2 files in other folders)
